--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,13 +35,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-          cache: 'pip'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -e .
+        run: uv sync
 
       - name: Determine version
         id: version
@@ -105,7 +106,7 @@ jobs:
       - name: Build documentation with make
         run: |
           cd docs
-          make html
+          uv run make html
 
       - name: Debug - Check build output
         run: |
