--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build documentation with make
         run: |
           cd docs
-          uv run make html
+          uv run make html-all
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
